create sign up screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,15 +4,17 @@
     <string name="email">Email</string>
     <string name="invalid_email">Invalid email</string>
     <string name="password">Password</string>
+    <string name="confirm_password">Confirm password</string>
     <string name="show_password">Show password</string>
     <string name="hide_password">Hide password</string>
     <string name="invalid_password">Invalid password</string>
-    <string name="invalid_password_confirmation">Passwords don\`t match</string>
+    <string name="invalid_password_confirmation">Passwords don\'t match</string>
     <string name="logo_unj_desc">Logo UNJ</string>
     <string name="login_body_title">Silahkan login terlebih dahulu untuk mengakses!</string>
     <string name="login_hint_subtitle">Gunakan e-mail dan password mahasiswa anda</string>
     <string name="login">Login</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="sign_up">Sign Up</string>
-    <string name="dont_have_account">Don\`t have an account?</string>
+    <string name="dont_have_account">Don\'t have an account?</string>
+    <string name="sign_up_body_title">Buat akunmu untuk dapat mengakses SIAVO UNJ</string>
 </resources>
