--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="sign_up">Sign Up</string>
     <string name="dont_have_account">Don\'t have an account?</string>
     <string name="sign_up_body_title">Buat akunmu untuk dapat mengakses SIAVO UNJ</string>
+    <string name="notification">Notification</string>
+    <string name="discussion">Discussion</string>
+    <string name="profile">Profile</string>
+    <string name="home">Home</string>
 </resources>
