add latest info home section

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="panduan">Panduan</string>
     <string name="pengumpulan_berkas">Pengumpulan Berkas</string>
     <string name="penggunaan_aplikasi">Penggunaan Aplikasi</string>
+    <string name="see_detail">Lihat Selengkapnya</string>
+    <string name="latest_info">Info Terbaru</string>
 </resources>
