--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,6 @@
     <string name="scholarship">Beasiswa</string>
     <string name="view_all">Lihat Semua</string>
     <string name="intern_opportunity">Lowongan Magang</string>
+    <string name="last_discussion">Diskusi Terakhir</string>
+    <string name="latest_update">Update Terbaru:</string>
 </resources>
