--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="intern_opportunity">Lowongan Magang</string>
     <string name="last_discussion">Diskusi Terakhir</string>
     <string name="latest_update">Update Terbaru:</string>
+    <string name="find_discussion_topic">Cari topik diskusi</string>
 </resources>
