--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="saved_discussions">Diskusi Tersimpan</string>
     <string name="discussion_forum">Forum Diskusi</string>
     <string name="mark_as_read">Tandai sudah dibaca</string>
+    <string name="add_topic">Tambah Topik</string>
 </resources>
