--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="discussion_forum">Forum Diskusi</string>
     <string name="mark_as_read">Tandai sudah dibaca</string>
     <string name="add_topic">Tambah Topik</string>
+    <string name="my_notifications">Notifikasi Saya</string>
 </resources>
